--- a/main.css
+++ b/main.css
@@ -106,11 +106,12 @@ a:hover{
 .locations img{
     width: 90%;
 }
+
 .destinations{
     float: left;
     text-align: center;
     padding: 15px;
-    width: 40%;
+    width: 45%;
 }
 .destinations img{
     width: 90%;
@@ -139,7 +140,7 @@ th, td {
 td{
     height: 50%;
 }
-thead {background-color: azure}
+thead {background-color: whitesmoke}
 
 /* Sidebar styles */
 #side_bar{
@@ -155,13 +156,19 @@ thead {background-color: azure}
     margin-top: 15px;
     padding: 15px;
 }
-
+/* About styles */
+#about{
+    min-height: 50px;
+    text-align: center;
+    background-color: whitesmoke;
+    border-bottom: 1px solid coral;
+}
 /* Page footer sytlyes */
 #footer{
     padding: 5px;
     margin-top: 5px;
     color: coral;
-    background-color: azure;
+    background-color: whitesmoke;
     text-align: right;
     clear: both;
 }
