--- a/main.css
+++ b/main.css
@@ -163,6 +163,75 @@ thead {background-color: whitesmoke}
     background-color: whitesmoke;
     border-bottom: 1px solid coral;
 }
+
+/* Form styles */
+.quote{
+    width: 90%;
+    padding: 5px;  
+}
+input[type=text]{
+    width: 40%;
+    padding: 20px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid grey;
+    border-radius: 1px;
+}
+input[type=email]{
+    width: 40%;
+    padding: 20px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid grey;
+    border-radius: 1px;
+}
+input[type=phone]{
+    width: 40%;
+    padding: 20px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid grey;
+    border-radius: 1px;
+}
+input:focus {
+  background-color: whitesmoke;
+}
+label{
+    display: block;
+    font-size: 15px;
+    margin-top: 5px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; 
+}
+textarea {
+  width: 50%;
+  height: 150px;
+  padding: 12px 20px;
+  border: 2px solid grey;
+  border-radius: 4px;
+  background-color: whitesmoke;
+  resize: none;
+}
+select {
+  width: 15%;
+  padding: 10px 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: whitesmoke;
+}
+.button1{
+    width: 10%;
+    padding: 10px 10px;
+    background-color: whitesmoke;
+    border: 2px solid grey;
+    border-radius: 5px;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 /* Page footer sytlyes */
 #footer{
     padding: 5px;
@@ -171,4 +240,7 @@ thead {background-color: whitesmoke}
     background-color: whitesmoke;
     text-align: right;
     clear: both;
+}
+#audioplayer{
+    float: left;
 }
